--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <div id="album">
       <div id="jeu">
         <h1 id="titre">Racin' the Street</h1>
-        <h2 class="chapitre">Le commencement</h2>
-        <p id="chapeau">
+        <h2 id="chapitre">Le commencement</h2>
+        <p id="text">
           Devenez un pilote de la rue, compétitionnez contre votre scène local.
           Modifiez vos voitures favorites et faites la course pour devenir le
           champion! Êtes vous prêt à faire la course?
         </p>
-        <div class="btn-pg1">
-          <button class="btn" id="pret">Je suis prêt!</button>
-          <button class="btn" id="quit">Je ne suis pas prêt</button>
-          <button class="btn" id="quit">Quitter</button>
-        </div>
         <img
           id="image-album"
           src="assets/images/joshua-koblin-UOBJtYh1C6I-unsplash.jpg"
         />
+        <div class="btn-pg1">
+          <button class="btn" id="btn1">Je suis prêt!</button>
+          <button class="btn" id="btn2">Je ne suis pas prêt</button>
+          <button class="btn" id="btn3">Quitter</button>
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
