--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
           id="image-album"
           src="assets/images/joshua-koblin-UOBJtYh1C6I-unsplash.jpg"
         />
-        <div class="btn-pg1">
-          <button class="btn" id="btn1">Je suis prêt!</button>
-          <button class="btn" id="btn2">Je ne suis pas prêt</button>
-          <button class="btn" id="btn3">Quitter</button>
-        </div>
+        <div class="btn-pg1"></div>
       </div>
     </div>
     <script src="script.js"></script>
