--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Racin' the street</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <div id="album">
@@ -23,6 +23,6 @@
         <div class="btn-pg1"></div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="assets/script/script.js"></script>
   </body>
 </html>
