ajustement des image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Racin' the street</title>
     <link rel="stylesheet" href="assets/css/style.css" />
+    <meta name="author" content="Matis Labelle" />
   </head>
   <body>
     <div id="album">
@@ -17,6 +18,7 @@
           champion! Êtes vous prêt à faire la course?
         </p>
         <img
+          class="media"
           id="image-album"
           src="assets/images/joshua-koblin-UOBJtYh1C6I-unsplash.jpg"
         />
