--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         <div class="btn-pg1"></div>
       </div>
     </div>
-    <script src="assets/script/script.js"></script>
+    <button type="button" class="btn reset">Recommencer</button>
+    <div class="btn mute">
+      <label>Mute</label>
+      <input id="mute" type="checkbox" />
+    </div>
   </body>
+  <script src="assets/script/script.js"></script>
 </html>
